test/failing/failing_access_modifiers.c
class AccessTest
{
private
    {
        int secret;
    }
public
    {
        int value;
    public
        {
            int value;
        }
    }
protected
    {
        int hidden;
    }
};
